@@ -1,5 +1,5 @@
 @echo off
 setlocal
 cd /d "%~dp0"
-java -jar target\vector-1.0.0-SNAPSHOT.jar
+java --enable-native-access=ALL-UNNAMED -jar target\vector-1.0.0-SNAPSHOT.jar
 pause
